--- a/MVCRealWorld/Views/Home/Index.cshtml
+++ b/MVCRealWorld/Views/Home/Index.cshtml
@@ -6,4 +6,6 @@
 <h2>Index</h2>
 <br />
 No Account yet? @Html.ActionLink("Signup Now!", "SignUp", "Account")
+<br />
+Already Have An Account @Html.ActionLink("LogIn Here!", "LogIn", "Account")
 
